; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_dwarf-aux.c_cu_get_comp_dir.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_dwarf-aux.c_cu_get_comp_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DW_AT_comp_dir = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @cu_get_comp_dir(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @DW_AT_comp_dir, align 4
  %7 = call i32* @dwarf_attr(i32* %5, i32 %6, i32* %4)
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %12

10:                                               ; preds = %1
  %11 = call i8* @dwarf_formstring(i32* %4)
  store i8* %11, i8** %2, align 8
  br label %12

12:                                               ; preds = %10, %9
  %13 = load i8*, i8** %2, align 8
  ret i8* %13
}

declare dso_local i32* @dwarf_attr(i32*, i32, i32*) #1

declare dso_local i8* @dwarf_formstring(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
